--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "diesel_pg_tester"
 version = "0.5.0"
 authors = ["Shane Hathaway <shane.hathaway@openpaymentnetwork.us>"]
 edition = "2018"
+description = "Runs Diesel tests efficiently using a live Postgres connection"
+license = "MIT"
 repository = "https://github.com/hathawsh/diesel_pg_tester"
 
 [dependencies]
